codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_live_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
                                                            │CONTEXT LEDGER  Total ≈0 tokens
  Configure Terminal Title                                  │admitted
  Select which items to display in the terminal title.      │
                                                            │No portable context is available.
  Type to search                                            │ACTIVE FILES  ≈0 tokens admitted
  >                                                         │No sources available.
› [x] project-name   Project name (falls back to current …  │
  [x] thread-title   Current thread title, or thread iden…  │DURABLE MEMORY  ≈0 tokens admitted
  [x] git-branch     Current Git branch (omitted when una…  │No sources available.
  [x] task-progress  Latest task progress from update_pla…  │
  [ ] app-name       Codex app name                         │INSTRUCTIONS  ≈0 tokens admitted
  [ ] current-dir    Current working directory              │No sources available.
  [ ] activity       Spinner while working, action-requir…  │
  [ ] run-state      Compact session run-state text (Read…  │TOOL EVIDENCE  ≈0 tokens admitted

  preview-live-root | Live preview thread | feature/live-…
  Press space to toggle; ←/→ to move; enter to confirm and c

 Elpis · model gpt-5.6-sol · location /tmp/project
