codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
                                                            │CONTEXT LEDGER  Total ≈0 tokens
  Configure Terminal Title                                  │admitted
  Select which items to display in the terminal title.      │
                                                            │No portable context is available.
  Type to search                                            │ACTIVE FILES  ≈0 tokens admitted
  >                                                         │No sources available.
› [x] monthly-limit  Remaining usage on the monthly usage…  │
  [x] weekly-limit   Remaining usage on the weekly usage …  │DURABLE MEMORY  ≈0 tokens admitted
  [ ] app-name       Codex app name                         │No sources available.
  [ ] project-name   Project name (falls back to current …  │
  [ ] current-dir    Current working directory              │INSTRUCTIONS  ≈0 tokens admitted
  [ ] activity       Spinner while working, action-requir…  │No sources available.
  [ ] run-state      Compact session run-state text (Read…  │
  [ ] thread-title   Current thread title, or thread iden…  │TOOL EVIDENCE  ≈0 tokens admitted

  monthly 65% left | weekly 50% left
  Press space to toggle; ←/→ to move; enter to confirm and c

 Elpis · model gpt-5.6-sol · location /tmp/project
