codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"• Working (0s • esc to interrupt) · 1 backgroun…│CONTEXT LEDGER  Total ≈0 tokens"
"                                                │admitted                       "
"┌──────────────────────────────────────────────┐│                               "
"› Ask Codex to do anything                     ││No portable context is         "
"└──────────────────────────────────────────────┘│available.                     "
"        100% context left · Tab Context Ledger  │ACTIVE FILES  ≈0 tokens        "
"                                                │admitted                       "
" Elpis · model gpt-5.6-sol · location /tmp/proje│No sources available.          "
