codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workspace_member_usage_limit_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
┌──────────────────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens
│ Usage limit reached                                      ││admitted
│ Request a limit increase from your owner to continue usi ││
│                                                          ││No portable context is available.
  1. Yes (y)                                               ││ACTIVE FILES  ≈0 tokens admitted
› 2. No (default) (n)                                      ││No sources available.
└──────────────────────────────────────────────────────────┘│
  Press enter to confirm or esc to go back                  │DURABLE MEMORY  ≈0 tokens admitted
                                                            │No sources available.
 Elpis · model gpt-5.6-sol · location /tmp/project          │
